# microbenches

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: div.rs  mlp.rs  simd_sum.rs
src/: div.rs  lib.rs  mlp.rs  simd_sum.rs
